--- a/cis237Assignment6/Content/Site.css
+++ b/cis237Assignment6/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* Set font for h1*/
+.h1Font{
+    font-family:cursive;
+}
+/*Set font for h3*/
+.h3Font{
+    font-family: Corbel;  
+}
