--- a/cis237Assignment6/Views/Home/About.cshtml
+++ b/cis237Assignment6/Views/Home/About.cshtml
@@ -2,6 +2,5 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Audre's Beverages is home to thousands of different drinks.</p>
