--- a/cis237Assignment6/Views/Home/Contact.cshtml
+++ b/cis237Assignment6/Views/Home/Contact.cshtml
@@ -2,13 +2,12 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    111 Street Road<br />
+    Three Rivers, MI 49093<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    111.111.1110
 </address>
 
 <address>
